# ManticoreUI

./: .gitignore  .gitmodules  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: binaryninja-ci.yml  ci.yml  ghidra-ci.yml  server-ci.yml
binjastub/: __init__.py  requirements.txt
docs/: features.rst
docs/binaryninja/: evm.rst  function_models.rst  hooks.rst  shared_library.rst  state_management.rst
docs/ghidra/: hooks.rst  multiple_instances.rst  state_management.rst
mui/: __init__.py  constants.py  hook_manager.py  introspect_plugin.py  manticore_evm_runner.py  manticore_native_runner.py  manticore_native_runnner.py  mui.py  mui_connection.py  native_hooks.py  native_plugin.py  notification.py  report.py  settings.py  utils.py  welcome.py
mui/dockwidgets/: code_dialog.py  evm_run_dialog.py  function_model_dialog.py  global_hook_dialog.py  hook_list_widget.py  library_dialog.py  list_widget.py  native_run_dialog.py  run_dialog.py  state_graph_widget.py  state_list_widget.py  state_widget.py  widget.py
mui/server_utils/: MUICore_pb2.py  MUICore_pb2_grpc.py
plugins/binaryninja/: .gitignore  Makefile  README.rst  justfile  pyproject.toml  requirements-dev.txt
plugins/binaryninja/binjastub/: README.md  __init__.py  plugin.json  requirements.txt
plugins/binaryninja/mui/: __init__.py  hook_manager.py  introspect_plugin.py  manticore_evm_runner.py  manticore_native_runner.py  mui.py  mui_connection.py  native_plugin.py  notification.py  report.py  settings.py  utils.py
plugins/binaryninja/mui/dockwidgets/: QCodeEditor.py  code_dialog.py  function_model_dialog.py  global_hook_dialog.py  hook_list_widget.py  library_dialog.py  list_widget.py  run_dialog.py  state_graph_widget.py  state_list_widget.py  widget.py
plugins/binaryninja/tests/: test_hook_manager.py  test_mui.py  test_native_plugin.py  test_persistence.py
plugins/binaryninja/tests/binaries/: hello_world  hello_world_basic_hooks.bndb  rebase_harness
plugins/binaryninja/tests/binaries/src/: rebase_harness.c
plugins/common/: evm_run_settings.json  native_run_settings.json
plugins/ghidra/: .gitignore  README.md  README.rst  justfile
plugins/ghidra/MUI/: .gitignore  build.gradle  extension.properties
plugins/ghidra/MUI/os/: .gitignore
plugins/ghidra/MUI/src/main/grpc/muicore/: ManticoreUIGrpc.java
plugins/ghidra/MUI/src/main/java/mserialize/: StateOuterClass.java
plugins/ghidra/MUI/src/main/java/mui/: MUIHookAddressColorizer.java  MUIHookCodeDialogLauncher.java  MUIHookListComponent.java  MUIHookUserObject.java  MUILogContentComponent.java  MUILogProvider.java  MUILogTabComponent.java  MUIPlugin.java  MUIPopupMenu.java  MUIRunner.java  MUISettings.java  MUISetupProvider.java  MUIStateListProvider.java  ManticoreRunner.java  ManticoreStateListModel.java
plugins/ghidra/MUI/src/main/java/muicore/: MUICore.java
plugins/ghidra/MUI/src/main/proto/: MUICore.proto  state.proto
server/: .gitignore  README.md  justfile
server/muicore/: mui_server.py
tests/: test_native_plugin.py
tests/binaries/src/: hello_world.c  rebase_lib.c
