[tool.poetry]
name = "mui"
version = "0.1.0-beta"
description = "MUI is a Manticore User Interface for Binary Ninja"
authors = ["Trail of Bits <opensource@trailofbits.com>"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
manticore = {path = "./manticore", extras = ["native"], develop = true}
pytest = "^6"
black = "21.6b0"
mypy = "0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  | manticore
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

# mypy global options:
[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true
files = ['mui', 'tests']
